# JIRA-bot

./: Dockerfile  Makefile  README.md  prefect.yaml  pyproject.toml
jira_bot/flows/: jira_bot_flow.py
jira_bot/lib/core/: jira_connections.py  protocol_manager.py
jira_bot/lib/query/: database.py
jira_bot/lib/tools/: constants.py  helper_functions.py
jira_bot/tasks/: __init__.py
